--- a/CatScratchApp/views/index.pug
+++ b/CatScratchApp/views/index.pug
@@ -1,14 +1,12 @@
 doctype html
 html
   head
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
     title CatScratch
     // INCLUDE REQUIRED THIRD PARTY LIBRARY JAVASCRIPT AND CSS
-    script(type='text/javascript', src='js/angular.min.js')
     link(rel='stylesheet', href='css/bootstrap.min.css')
     link(rel='stylesheet', href='css/bootstrap-responsive.min.css')
-    // INCLUDE APPLICATION SPECIFIC CSS AND JAVASCRIPT
-    script(type='text/javascript', src='js/app/app.js')
-    script(type='text/javascript', src='js/app/controllers/mainController.js')
     link(rel='stylesheet', href='css/main.css')
   body
     .banner
