mongo needs some work

--- a/CatScratchApp/views/index.pug
+++ b/CatScratchApp/views/index.pug
@@ -12,16 +12,16 @@ html
     .banner
       .container
         h1 CatScratch
-    .container.main-frame(style='background:#37243f', ng-app='CatApp', ng-controller='mainController', ng-init='init()')
+    .container.main-frame(style='background:#37243f')
       .search-box.row-fluid.form-inline
       .results-top
       .results-container
         ul.episode-list
       .results-bottom
     h1#wrapper(style='text-align: center') Enter a harassing word
-    #wrapper.center-block(style='text-align: center', ng-app='', ng-init="textBox='hello, harasser'")
-      input#input.searchboxer(type='text', ng-model='textBox', name='input', placeholder='Hello, Harasser')
-      button#searchBtn.button(ng-model='searchBtn', name='searchBtn', style='margin:-1px 7px 0 2px') Search
+    #wrapper.center-block(style='text-align: center')
+      input#input.searchboxer(type='text', name='input', placeholder='Hello, Harasser')
+      button#searchBtn.button(name='searchBtn', style='margin:-1px 7px 0 2px') Search
       script.
         (function(){
         var input = document.getElementById('input');
