--- a/CatScratchApp/views/index.pug
+++ b/CatScratchApp/views/index.pug
@@ -7,7 +7,8 @@ html
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css", rel="stylesheet", integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u", crossorigin="anonymous")
     link(rel='stylesheet', href='/css/bootstrap-responsive.min.css')
     link(rel='stylesheet', href='/css/main.css')
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    link(rel='stylesheet', href='https://afeld.github.io/emoji-css/emoji.css')
+    script(src="https://code.jquery.com/jquery-2.2.4.js", integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=", crossorigin="anonymous")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js", integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa", crossorigin="anonymous")
   body(background='/Nebula HD Wallpaper - Samsung Galaxy S5 HD Wallpapers Free.jpg')
     .banner
@@ -47,23 +48,28 @@ html
       #spacerBot
       script.
         (function(){
-        var input = document.getElementById('input');
-        var searchBtn = document.getElementById('searchBtn');
-        console.log(input.value);
-        var onClick = function(){
-        var str = input.value;
-        console.log(str);
-        };
-        searchBtn.addEventListener('click', onClick);
+          var input = document.getElementById('input');
+          var searchBtn = document.getElementById('searchBtn');
+          var onClick = function(){
+            var str = input.value;
+            console.log(str);
+            postData(str);
+          };
+          searchBtn.addEventListener('click', onClick);
         }());
-      script.
-        (function() {
-        var input = document.getElementById('input');
-        var searchBtn = document.getElementById('searchBtn');
-        console.log(input.value);
-        var onClick = function() {
-        var str = input.value;
-        console.log(str);
-        };
-        searchBtn.addEventListener('click', onClick);
-        }());
+        function postData(word) {
+          $.ajax({
+            url: "http://127.0.0.1:5000/pythonApp.py",
+              data: {
+                word: word
+                },
+              success: function (data) {
+                console.log(data);
+                location.reload();
+              }
+          });
+        }
+        function callbackFunc(response) {
+        // do something with the response
+          console.log(response);
+        }
