--- a/CatScratchApp/views/index.pug
+++ b/CatScratchApp/views/index.pug
@@ -50,6 +50,12 @@ html
         (function(){
           var input = document.getElementById('input');
           var searchBtn = document.getElementById('searchBtn');
+          $(document).ready(function(){
+            $('#input').keypress(function(e){
+              if(e.keyCode==13)
+                $('#linkadd').click();
+              });
+            });
           var onClick = function(){
             var str = input.value;
             console.log(str);
@@ -69,6 +75,11 @@ html
               }
           });
         }
+        $('input').keydown(function(e) {
+          if (e.keyCode == 13) {
+            $(this).closest('form').postData(input);
+              }
+        });
         function callbackFunc(response) {
         // do something with the response
           console.log(response);
