--- a/CatScratchApp/public/css/main.css
+++ b/CatScratchApp/public/css/main.css
@@ -183,7 +183,7 @@ body {
 div.table-title {
    display: block;
   margin: auto;
-  max-width: 600px;
+  max-width: 900px;
   padding:5px;
   width: 100%;
 }
@@ -207,7 +207,7 @@ div.table-title {
   border-collapse: collapse;
   height: 320px;
   margin: auto;
-  max-width: 600px;
+  max-width: 900px;
   padding:5px;
   width: 100%;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
@@ -242,9 +242,13 @@ tr {
   color:#666B85;
   font-size:16px;
   font-weight:normal;
+  width: 800px;
   text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
 }
+.table{
+width: 900px;
 
+}
 tr:hover td {
   background:#4E5066;
   color:#FFFFFF;
